// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table body tests should table body match snapshot 1`] = `
<div>
  <tbody
    class="[&_tr:last-child]:border-0"
  />
</div>
`;

exports[`Table caption tests should table caption match snapshot 1`] = `
<div>
  <caption
    class="mt-4 text-sm text-muted-foreground"
  >
    caption
  </caption>
</div>
`;

exports[`Table cell tests should table cell match snapshot 1`] = `
<div>
  <td
    class="p-4 align-middle [&:has([role=checkbox])]:pr-0"
  />
</div>
`;

exports[`Table footer tests should table footer match snapshot 1`] = `
<div>
  <tfoot
    class="border-t bg-muted/50 font-medium [&>tr]:last:border-b-0"
  />
</div>
`;

exports[`Table head tests should table head match snapshot 1`] = `
<div>
  <th
    class="h-12 px-4 text-left align-middle font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0"
  />
</div>
`;

exports[`Table header tests should table header match snapshot 1`] = `
<div>
  <thead
    class="[&_tr]:border-b"
  />
</div>
`;

exports[`Table row tests should table row match snapshot 1`] = `
<div>
  <tr
    class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
  />
</div>
`;

exports[`Table tests should table match snapshot 1`] = `
<div>
  <div
    class="relative w-full overflow-auto"
  >
    <table
      class="w-full caption-bottom text-sm"
    />
  </div>
</div>
`;
